--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -21,7 +21,7 @@ x-superset-depends-on: &superset-depends-on
 x-superset-volumes: &superset-volumes
   # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   - ./docker:/app/docker
-  - superset_home:/app/superset_home
+  - ../data/superset/superset_home:/app/superset_home
 
 version: "3.7"
 services:
@@ -38,7 +38,7 @@ services:
     container_name: superset_db
     restart: unless-stopped
     volumes:
-      - db_home:/var/lib/postgresql/data
+      - ../data/postgresql/data:/var/lib/postgresql/data
 
   superset:
     env_file: docker/.env-non-dev
@@ -88,9 +88,5 @@ services:
       disable: true
 
 volumes:
-  superset_home:
-    external: false
-  db_home:
-    external: false
   redis:
     external: false
