--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,13 @@ x-superset-user: &superset-user root
 x-superset-depends-on: &superset-depends-on
   - db
   - redis
+  - mysql
 x-superset-volumes: &superset-volumes
   # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   - ./docker:/app/docker
   - ./superset:/app/superset
   - ./superset-frontend:/app/superset-frontend
-  - superset_home:/app/superset_home
+  - ../data/superset/superset_home:/app/superset_home
   - ./tests:/app/tests
 
 version: "3.7"
@@ -46,7 +47,7 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
     volumes:
-      - db_home:/var/lib/postgresql/data
+      - ../data/postgresql/data:/var/lib/postgresql/data
 
   superset:
     env_file: docker/.env
@@ -156,10 +157,14 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "celery inspect ping -A superset.tasks.celery_app:app -d celery@$$HOSTNAME"]
 
+  mysql:
+    image: mysql:5.7
+    container_name: mysql
+    env_file: docker/.env-non-dev
+    restart: unless-stopped
+    volumes:
+      - ../mysql:/var/lib/mysql
+
 volumes:
-  superset_home:
-    external: false
-  db_home:
-    external: false
   redis:
     external: false
