--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -45,4 +45,5 @@ SUPERSET_LOAD_EXAMPLES=no
 SUPERSET_SECRET_KEY=TEST_NON_DEV_SECRET
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
+# mapbox api key can be entered here
 MAPBOX_API_KEY=''
